<resources>
    <string name="app_name">Artemis</string>
    <string name="iv_logo">Placeholder for logo</string>
    <string name="tv_sign_up_clause"><b>Your username cannot be changed once your account is created</b>.\n\nBy creating an account, you agree to have read and understood the pertinent clauses in the <a href="https://www.privacy.gov.ph/data-privacy-act/">Philippine Data Privacy Act</a>.</string>
    <string name="tv_search_trivia">Gustav Klimt\'s <i>The Kiss</i> inspired one of the frames in the opening theme of the anime <i>Elfen Lied</i></string>
    <string name="tv_view_profile_about">The <b>Highlights</b> feature is a gallery where other users can see your selected posts upon visiting your profile. Add a post to your Highlights by clicking the star icon on your post.</string>
    <string name="tv_log_in_banner"><b>Art</b>emis</string>
    <string name="facebook_app_id">453277879102504</string>
    <string name="fb_login_protocol_scheme">fb453277879102504</string>
    <string name="tv_account_management_title">Account Management</string>
    <string name="iv_account_management_delete_icon">Delete icon</string>
    <string name="tv_account_management_delete">Delete My Account</string>
    <string name="tv_account_management_delete_note">This action will irreversibly delete all information associated with your account, including your posts and comments, from the database.</string>
    <string name="tv_account_management_caveat">WARNING!</string>
    <string name="fab_account_management_add">Add Button</string>
    <string name="iv_item_rectangular_pic_grid">Rectangular picture</string>
    <string name="iv_item_placeholder_search_results_user1">Placeholder search results - user 1</string>
    <string name="iv_item_placeholder_search_results_user2">Search results placeholder - user 2</string>
    <string name="iv_item_placeholder_search_results_user3">Search results placeholder - user 3</string>
    <string name="iv_item_placeholder_search_results_user4">Search results placeholder - user 4</string>
    <string name="tv_add_profile_bio_create">Welcome</string>
    <string name="tv_add_profile_bio_community">Your Artemis account has been successfully created</string>
    <string name="iv_add_profile_bio_logo">Bio logo</string>
    <string name="iv_add_profile_bio_pen">Add profile - bio pen</string>
    <string name="tv_add_profile_bio">Add Short Bio</string>
    <string name="tiet_add_profile_bio">Share something about yourself</string>
    <string name="btn_add_profile_bio_add">ADD BIO</string>
    <string name="tv_add_profile_bio_skip">Write a bio later</string>
    <string name="iv_add_profile_bio_progress1">Progress 1</string>
    <string name="iv_add_profile_bio_progress2">Progress 2</string>
    <string name="iv_add_profile_bio_progress3">Progress 3</string>
    <string name="tv_add_profile_pic_create">Welcome</string>
    <string name="tv_add_profile_pic_community">Your Artemis account has been successfully created</string>
    <string name="iv_add_profile_pic_logo">Add Profile Pic Logo</string>
    <string name="iv_add_profile_pic_camera">Add Profile Pic - Camera</string>
    <string name="tv_add_profile_pic_photo">Add Profile Picture</string>
    <string name="tv_add_profile_pic_desc">A picture is worth a thousand words. Choose a photo that represents yourself or your art</string>
    <string name="btn_add_profile_pic_add">Set as Profile Picture</string>
    <string name="tv_add_profile_pic_skip">Upload a picture later</string>
    <string name="iv_add_profile_pic_progress1">Progress 1</string>
    <string name="iv_add_profile_pic_progress2">Progress 2</string>
    <string name="iv_add_profile_pic_progress3">Progress 3</string>
    <string name="fab_add_profile_pic_edit">FAB for profile pic edit</string>
    <string name="tv_add_profile_success_create">Welcome</string>
    <string name="tv_add_profile_success_community">Your Artemis account has been successfully created</string>
    <string name="iv_add_profile_success_logo">Add Profile Success - Logo</string>
    <string name="iv_add_profile_success_camera">Add Profile Success - Camera</string>
    <string name="tv_add_profile_success_photo">Congratulations!</string>
    <string name="tv_add_profile_success_desc">You have finished customizing your user profile. You may also update these details at a later time by going to your profile settings.</string>
    <string name="btn_add_profile_browse">Start Browsing</string>
    <string name="iv_add_profile_success_progress1">Progress 1</string>
    <string name="iv_add_profile_success_progress2">Progress 2</string>
    <string name="iv_add_profile_success_progress3">Progress 3</string>
    <string name="iv_item_placeholder_search_results_1">Search Result 1</string>
    <string name="iv_item_placeholder_search_results_2">Search Result 2</string>
    <string name="ib_item_placeholder_feed_bookmark">Placeholder feed bookmark</string>
    <string name="tv_item_placeholder_feed_share">Share</string>
    <string name="iv_item_placeholder_feed_post">Item placeholder feed - post</string>
    <string name="tv_item_placeholder_feed_upvote_counter">100 Upvotes</string>
    <string name="tv_item_placeholder_feed_dot">•</string>
    <string name="tv_item_placeholder_feed_comments">50 Comments</string>
    <string name="iv_item_placeholder_feed_upvote">Item placeholder feed - upvote</string>
    <string name="tv_item_placeholder_feed_upvote">Upvote</string>
    <string name="iv_item_placeholder_feed_comment">Item placeholder feed - comment</string>
    <string name="tv_item_placeholder_feed_comment">Comment</string>
    <string name="iv_item_placeholder_feed_share">Item placeholder feed - share</string>
    <string name="tv_item_comment_username">shooberino</string>
    <string name="tv_item_comment_date">August 20, 2021</string>
    <string name="ib_item_comment_edit">Item comment - edit</string>
    <string name="tv_item_comment_comment">The light from the lantern at the end of the Doppel\'s tail can call forth a myriad of illusions, and the scissors are said to cause great devastation in the near futures of those who have been harmed by them.</string>
    <string name="ib_item_feed_bookmark">Item feed - bookmark</string>
    <string name="tv_item_feed_username">shooberino</string>
    <string name="iv_item_feed_post">Item feed - post</string>
    <string name="tv_item_feed_upvote_counter">100 Upvotes</string>
    <string name="tv_item_feed_dot">•</string>
    <string name="tv_item_feed_comments">50 Comments</string>
    <string name="iv_item_feed_upvote">Item feed - upvote</string>
    <string name="tv_item_feed_upvote">Upvote</string>
    <string name="iv_item_feed_comment">Item feed - comment</string>
    <string name="tv_item_feed_comment">Comment</string>
    <string name="tv_item_feed_share">Share</string>
    <string name="iv_item_feed_share">Item feed - share</string>
    <string name="tv_item_feed_title">The Doppel of Silence and Iroha Tamaki from Magia Record</string>
    <string name="tv_dialog_profile_picture_header">Profile Picture</string>
    <string name="tv_dialog_profile_picture_edit">Upload from Gallery</string>
    <string name="iv_dialog_profile_picture_edit">Dialog profile picture - edit</string>
    <string name="tv_dialog_profile_picture_camera">Take a Photo</string>
    <string name="iv_dialog_profile_picture_camera">Dialog profile picture - camera</string>
    <string name="tv_dialog_profile_picture_picture_delete">Remove Picture</string>
    <string name="iv_dialog_profile_picture_delete">Dialog profile picture - delete</string>
    <string name="tv_dialog_post_artwork_header">Post Artwork</string>
    <string name="tv_dialog_post_artwork_edit">Upload from Gallery</string>
    <string name="iv_dialog_post_artwork_edit">Dialog post artwork - edit</string>
    <string name="tv_dialog_post_artwork_delete">Take a Photo</string>
    <string name="iv_dialog_post_artwork_delete">Dialog post artwork - delete</string>
    <string name="iv_item_placeholder_comment_profile_pic">Item placeholder comment - profile pic</string>
    <string name="tv_item_placeholder_comment_username">shooberino</string>
    <string name="tv_item_placeholder_comment_date">August 20, 2021</string>
    <string name="ib_item_placeholder_comment_edit">Item placeholder comment - edit</string>
    <string name="tv_item_own_post_title">The Doppel of Silence and Iroha Tamaki from Magia Record</string>
    <string name="tv_item_own_post_share">Share</string>
    <string name="tv_item_own_post_comment">Comment</string>
    <string name="iv_item_own_post_share">Item own post - share</string>
    <string name="tv_item_own_post_highlight">Highlight</string>
    <string name="tv_item_own_post_comments">50 Comments</string>
    <string name="tv_item_own_post_dot">•</string>
    <string name="ib_item_own_post_options">Item own post - options</string>
    <string name="tv_item_own_post_username">shooberino</string>
    <string name="iv_item_own_post_post">Item own post - post</string>
    <string name="tv_item_own_post_upvote_counter">100 Upvotes</string>
    <string name="iv_item_own_post_highlight">Item own post - highlight</string>
    <string name="iv_item_own_post_comment">Item own post - comment</string>
    <string name="tv_dialog_own_post_header">My Post</string>
    <string name="tv_dialog_own_post_edit">Edit Details</string>
    <string name="iv_dialog_own_post_edit">Dialog own post - edit</string>
    <string name="tv_dialog_own_post_delete">Delete Post</string>
    <string name="iv_dialog_own_post_delete">Dialog own post - delete</string>
    <string name="tv_dialog_comment_header">Comment</string>
    <string name="tv_dialog_comment_edit">Edit Comment</string>
    <string name="iv_dialog_comment_edit">Dialog comment - edit</string>
    <string name="tv_dialog_comment_delete">Delete Comment</string>
    <string name="iv_dialog_comment_delete">Dialog comment - delete</string>
    <string name="iv_browse_bookmarks_none">Browse bookmarks - none</string>
    <string name="tv_browse_bookmarks_none">No bookmarks just yet</string>
    <string name="fab_bookmarks_add">Add bookmarks</string>
    <string name="tv_bookmarks_title">Artemis</string>
    <string name="iv_bookmarks_logo">Bookmarks logo</string>
    <string name="tv_browse_own_posts_title">View My Posts</string>
    <string name="iv_browse_own_posts_none">Browse own posts - none</string>
    <string name="tv_browse_own_posts_none">No posts just yet</string>
    <string name="fab_browse_own_posts_add">Browse own posts - add</string>
    <string name="tv_highlights_title">View Highlights</string>
    <string name="et_search_unregistered_bar">Search by tag or username</string>
    <string name="btn_search_unregistered_tag1">sketch</string>
    <string name="btn_search_unregistered_tag2">watercolor</string>
    <string name="btn_search_unregistered_tag3">digital</string>
    <string name="btn_search_unregistered_tag4">fanart</string>
    <string name="btn_search_unregistered_tag5">abstractart</string>
    <string name="iv_search_unregistered_art_trivia">Search unregistered - art trivia</string>
    <string name="tv_search_unregistered_art_trivia">#ArtTrivia</string>
    <string name="tv_search_unregistered_unregistered_note">You are browsing as a guest</string>
    <string name="fab_search_unregistered_add">Search unregistered - add</string>
    <string name="tv_broken_link_banner"><b>Art</b>e-miss</string>
    <string name="tv_broken_link_caveat">It is possible that our server is temporarily down or the data related to your request have been removed. \n\nIf this issue persists, you may contact us through our email:</string>
    <string name="tv_broken_link_header">Your request cannot be loaded</string>
    <string name="tv_broken_link_email"><u>artemis.appmaster@gmail.com</u></string>
    <string name="btn_log_in_recover">Attempt to Recover</string>
</resources>