<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_search_unregistered"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coord_search_unregistered"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/cl_search_unregistered_unregistered_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_search_unregistered"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl_search_unregistered"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:toolbarId="@+id/toolbar_search_unregistered">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_search_unregistered"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:padding="0dp"
                    tools:layout_collapseMode="pin" />

                <EditText
                    android:id="@+id/et_search_unregistered_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="56dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@android:color/white"
                    android:ems="10"
                    android:hint="@string/et_search_unregistered_bar"
                    android:imeOptions="actionSearch"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_search_unregistered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_search_unregistered_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="?attr/actionBarSize"
                android:paddingBottom="?attr/actionBarSize">

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp">

                        <Button
                            android:id="@+id/btn_search_unregistered_tag1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:backgroundTint="@color/pinkish_purple_lighter"
                            android:letterSpacing="0.05"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/btn_search_unregistered_tag1"
                            android:textAllCaps="false"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/btn_search_unregistered_tag2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="@color/pinkish_purple_lighter"
                            android:letterSpacing="0.05"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/btn_search_unregistered_tag2"
                            android:textAllCaps="false"
                            android:textSize="13sp"
                            tools:layout_marginLeft="8dp" />

                        <Button
                            android:id="@+id/btn_search_unregistered_tag3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:backgroundTint="@color/pinkish_purple_lighter"
                            android:letterSpacing="0.05"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/btn_search_unregistered_tag3"
                            android:textAllCaps="false"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/btn_search_unregistered_tag4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:backgroundTint="@color/pinkish_purple_lighter"
                            android:letterSpacing="0.05"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/btn_search_unregistered_tag4"
                            android:textAllCaps="false"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/btn_search_unregistered_tag5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:backgroundTint="@color/pinkish_purple_lighter"
                            android:letterSpacing="0.05"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:text="@string/btn_search_unregistered_tag5"
                            android:textAllCaps="false"
                            android:textSize="13sp" />
                    </LinearLayout>
                </HorizontalScrollView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_search_unregistered_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="0dp"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_search_unregistered_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.85" />

                <ImageView
                    android:id="@+id/iv_search_unregistered_art_trivia"
                    android:contentDescription="@string/iv_search_unregistered_art_trivia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:alpha="0.7"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@+id/tv_search_unregistered_art_trivia"
                    app:layout_constraintEnd_toEndOf="@id/gl_search_unregistered_right_margin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/gl_search_unregistered_left_margin"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                    app:layout_constraintVertical_bias="0.45"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/the_kiss" />

                <TextView
                    android:id="@+id/tv_search_unregistered_art_trivia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_search_unregistered_art_trivia"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_search_unregistered_art_trivia_text"
                    app:layout_constraintEnd_toStartOf="@+id/gl_search_unregistered_right_margin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/gl_search_unregistered_left_margin"
                    app:layout_constraintTop_toBottomOf="@+id/iv_search_unregistered_art_trivia"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_search_unregistered_art_trivia_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/tv_search_trivia"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/gl_search_unregistered_right_margin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/gl_search_unregistered_left_margin"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_unregistered_art_trivia"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search_unregistered_unregistered_note"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_main"
        app:layout_constraintBottom_toTopOf="@+id/nv_search_unregistered_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_search_unregistered_unregistered_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_search_unregistered_unregistered_note"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nv_search_unregistered_bottom"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:itemIconTint="@color/purple_navbar_lighter"
        app:itemTextColor="@color/purple_navbar_lighter"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_bottom_no_shaded">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_search_unregistered_add"
            android:contentDescription="@string/fab_search_unregistered_add"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="0dp"
            app:backgroundTint="@color/purple_navbar_lighter"
            app:elevation="0dp"
            app:fabCustomSize="44dp"
            app:maxImageSize="34dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@android:color/white"
            android:focusable="true" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>