<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_broken_link"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".BrokenLinkActivity">

    <ProgressBar
        android:id="@+id/pb_broken_link"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_pics_lighter"
        android:secondaryProgressTint="@color/pinkish_purple"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_broken_link_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/parabolic_border"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/gl_broken_link_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_broken_link_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_logo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/gl_broken_link_bottom_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/girl_arrow_no_border" />

        <TextView
            android:id="@+id/tv_broken_link_banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/delius"
            android:gravity="center"
            android:text="@string/tv_broken_link_banner"
            android:textColor="@color/white"
            app:autoSizeMaxTextSize="45sp"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/gl_broken_link_bottom_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_broken_link_bottom_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_broken_link_bottom_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.74" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_broken_link_bottom_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_broken_link_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_broken_link_top"
        app:layout_constraintVertical_bias="0.52">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_broken_link_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_broken_link_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/tv_broken_link_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_broken_link_header"
            android:textColor="@color/purple_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_broken_link_right"
            app:layout_constraintStart_toStartOf="@+id/gl_broken_link_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />

        <TextView
            android:id="@+id/tv_broken_link_caveat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_broken_link_caveat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_broken_link_right"
            app:layout_constraintStart_toStartOf="@+id/gl_broken_link_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_broken_link_header"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tv_broken_link_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_broken_link_email"
            android:textColor="@color/blue_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_broken_link_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_broken_link_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_broken_link_caveat"
            app:layout_constraintVertical_bias="0.01999998" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_main"
            android:text="@string/btn_log_in_recover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_broken_link_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/gl_broken_link_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_broken_link_email"
            app:layout_constraintVertical_bias="0.17000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_broken_link_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.42" />

</androidx.constraintlayout.widget.ConstraintLayout>